# rsync_loop

./: Cargo.toml  LICENSE  README.MD  README.md  readme.md
src/: main.rs
